# better-code

./: .gitignore  .gitmodules  LICENSE  README.md  _config.docker.yml  _config.yml  docker-compose.yml  inactiveLink.html  index.md  outline.md  reveal.js.map
_includes/: common.liquid  figure.html  navigation.html  slideshow.liquid
_layouts/: default.html  presentation.html  presentation2.html  slideshow.html
better-code/: book.toml
chapters/: 0000 Outline.md  0001 slide-test.html  0001 slide-test.md  0100 Introduction.md
chapters/XXXB-data-structures/benchmarks/: CMakeLists.txt  README.md  main.cpp
docs/: outline.md
experiments/: reveal-markdown-demo.html  slide-test.md  slide-test2.md
glossary/: "Other Way Around".md  .gitignore  Abort.md  Abstraction Layer.md  Basic Exception Guarantee.md  Basis Operations.md  Bipartite (Graph).md  Cardinality.md  Class Invariant.md  Compiler.md  Concept.md  Constraint.md  Contradiction.md  Correct(ness).md  Defect.md  Desired Invariant.md  Documentation.md  Engineering.md  Equal.md  Guarantee.md  Ignore (Error).md  Implementation (Programming Language).md  Implication.md  Incidental.md  Invalid (Object).md  Invalid.md  Lifting.md  Maintained.md  Modality.md  Postcondition.md  Precondition.md  README.md  Range.md  Recoverable.md  Regular.md  Relation.md  Relationship.md  Requirement.md  Retry.md  Safe.md  (+13 more)
materials/: bipartite-graphs-for-concurrency.graffle
notes/: 2022-10-12-relationships.md  2022-10-18-algorithms.md  2023-01-27-algorithms-talk
slides/: 0100 Introduction.md  0200 Algorithms.md  9999 Scratchpad.md  (+2 more)
(+99 files in other folders)
